[gd_scene load_steps=4 format=2]

[ext_resource path="res://laser-gun.png" type="Texture" id=1]
[ext_resource path="res://LaserGun.gd" type="Script" id=2]
[ext_resource path="res://Laser.tscn" type="PackedScene" id=3]

[node name="LaserGun" type="Node2D"]
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="bulletSpawn" type="Position2D" parent="."]
position = Vector2( 11.3649, 0 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
